--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App{
     text-align: center;
+    margin-top: 40px;
+    min-height: 100%;
+    width: 100%;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .notes-list{
