--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,30 @@
   justify-content: center;
 }
 
+.App .add-button {
+  position: fixed;
+  bottom: 80px;
+  right: 20px;
+  border-radius: 20%;
+  font-size: 50px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.App .add-button .add-button-text {
+  position: relative;
+  bottom: 5px;
+  left: -5px;
+}
+
 .notes-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.note-link {
+  margin-top: 20px;
 }
