--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
+.Nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
 .App {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url("../src/bg.png");
   text-align: center;
-  margin-top: 40px;
   min-height: 100%;
   width: 100%;
   padding-bottom: 50px;
@@ -9,22 +18,45 @@
   justify-content: center;
 }
 
+.App .title {
+  position: fixed;
+  left: 50%;
+  top: 10px;
+  transform: translate(-50%, 0);
+  font-size: 35px;
+}
+
 .App .add-button {
   position: fixed;
-  bottom: 80px;
-  right: 20px;
+  bottom: 50px;
+  right: 50px;
   border-radius: 20%;
   font-size: 50px;
   width: 50px;
   height: 50px;
   display: flex;
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.App .add-button .add-button-text {
-  position: relative;
-  bottom: 5px;
-  left: -5px;
+.App .load-button {
+  position: fixed;
+  bottom: 150px;
+  right: 50px;
+  border-radius: 20%;
+  font-size: 50px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.App .load-button:hover,
+.App .add-button:hover {
+  transform: scale(1.3);
+  transition: all ease 0.2s;
+  z-index: 5;
 }
 
 .notes-list {
